--- a/pulse-analyser.properties
+++ b/pulse-analyser.properties
@@ -1,2 +1,5 @@
 spring.cloud.stream.bindings.pulseConsumer-in-0.destination=${CLOUDKARAFKA_USERNAME}-default
 spring.cloud.stream.bindings.pulseConsumer-in-0.group=${CLOUDKARAFKA_USERNAME}-analyser
+spring.cloud.stream.source=jumps;critical-jumps
+spring.cloud.stream.bindings.jumps-out-0.destination=${CLOUDKARAFKA_USERNAME}-jumps
+spring.cloud.stream.bindings.critical-jumps-out-0.destination=${CLOUDKARAFKA_USERNAME}-critical-jumps
