adds mongodb connection

--- a/application.properties
+++ b/application.properties
@@ -6,3 +6,4 @@ logging.level.telran=trace
 spring.jmx.enabled=true
 management.endpoint.jmx.exposure.include=*
 management.endpoint.shutdown.enabled=true
+data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.mcubm.mongodb.net/college?retryWrites=true&w=majority
