adds mongodb connection

--- a/application.properties
+++ b/application.properties
@@ -6,4 +6,4 @@ logging.level.telran=trace
 spring.jmx.enabled=true
 management.endpoint.jmx.exposure.include=*
 management.endpoint.shutdown.enabled=true
-data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.7mhlt.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+data.mongodb.uri=mongodb+srv://root:${MONGO_PASSWORD}@cluster0.7mhlt.mongodb.net/jump-values?retryWrites=true&w=majority
