adds average populator config

--- a/pulse-monitoring-average-populator.properties
+++ b/pulse-monitoring-average-populator.properties
@@ -1,2 +1,2 @@
-spring.cloud.stream.bindings.jumpConsumer-in-0.destination=${CLOUDKARAFKA_USERNAME}-average
-spring.cloud.stream.bindings.jumpConsumer-in-0.group=${CLOUDKARAFKA_USERNAME}-average-populator
+spring.cloud.stream.bindings.averageConsumer-in-0.destination=${CLOUDKARAFKA_USERNAME}-average
+spring.cloud.stream.bindings.averageConsumer-in-0.group=${CLOUDKARAFKA_USERNAME}-average-populator
