--- a/application.properties
+++ b/application.properties
@@ -3,6 +3,8 @@ spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.
 spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
 spring.kafka.properties.security.protocol=SASL_SSL
 logging.level.telran=trace
+spring.redis.host=${REDIS_HOST:localhost}
+spring.redis.port=6379
 spring.jmx.enabled=true
 management.endpoint.jmx.exposure.include=*
 management.endpoint.shutdown.enabled=true
